# AiGamesAssignment_2

assignment2-face-recognition/: how-to-create-a-pgm-using-gimp.md
assignment2-face-recognition/att_faces/s41/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm  Zac1.pgm  Zac4.pgm  Zac5.pgm  Zac8.pgm
assignment2-face-recognition/att_faces/s42/: 1.pgm  10.pgm  2.pgm  3.pgm  6.pgm  7.pgm  9.pgm
assignment2-face-recognition/att_faces/s43/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm  README.md
assignment2-face-recognition/src/: AIPFG2Qs.txt  CMakeLists.txt  face-rec.cpp
